fixed JavaParserUtils to use new API